--- a/view/viewUsers.html
+++ b/view/viewUsers.html
@@ -18,6 +18,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
+    />
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -76,6 +80,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script>
       $(document).ready(function () {
         $.ajax({
@@ -122,7 +127,6 @@
           data: {
             id: data,
             userData: userData,
-            
           },
           dataType: "html",
           success: function (response) {
@@ -140,6 +144,9 @@
           dataType: "html",
           success: function (response) {
             $(".res").html(response);
+            $("#myTable").DataTable({
+              order: [[1, "desc"]],
+            });
           },
         });
       }
